--- a/Hotel/src/hotel/view/frmReserva.form
+++ b/Hotel/src/hotel/view/frmReserva.form
@@ -185,12 +185,9 @@
                       </Group>
                       <EmptySpace min="-2" pref="11" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="1" attributes="0">
-                          <Group type="102" alignment="1" attributes="0">
-                              <EmptySpace min="1" pref="1" max="-2" attributes="0"/>
-                              <Group type="103" groupAlignment="3" attributes="0">
-                                  <Component id="lblCPF" alignment="3" min="-2" max="-2" attributes="0"/>
-                                  <Component id="tfdCPF" alignment="3" min="-2" max="-2" attributes="0"/>
-                              </Group>
+                          <Group type="103" alignment="1" groupAlignment="3" attributes="0">
+                              <Component id="lblCPF" alignment="3" min="-2" max="-2" attributes="0"/>
+                              <Component id="tfdCPF" alignment="3" min="-2" max="-2" attributes="0"/>
                           </Group>
                           <Component id="btnPesquisaPessoa" min="-2" max="-2" attributes="0"/>
                       </Group>
