--- a/Hotel/src/hotel/view/frmPrincipal.form
+++ b/Hotel/src/hotel/view/frmPrincipal.form
@@ -182,6 +182,9 @@
               <Properties>
                 <Property name="text" type="java.lang.String" value="Cadastro de Aplica&#xe7;&#xe3;o"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="mniAplicacaoActionPerformed"/>
+              </Events>
             </MenuItem>
             <MenuItem class="javax.swing.JMenuItem" name="mniSair">
               <Properties>
